--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "axios": "^1.6.8",
     "compressorjs": "^1.2.1",
     "cssnano": "^6.0.1",
     "emailjs": "^4.0.3",
@@ -21,9 +22,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-parallax-tilt": "^1.7.177",
     "react-router-dom": "^6.16.0",
     "react-scroll": "^1.9.0",
+    "react-share": "^5.1.0",
     "react-tilt": "^1.0.2",
     "sharp": "^0.33.2",
     "swiper": "^10.3.1"
