--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,9 @@
 [[redirects]]
+from = "/images/*"
+to = "/images/:splat"
+status = 200
+
+[[redirects]]
 from = "/*"
 to = "/index.html"
 status = 200
