--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "react-router-dom": "^6.16.0",
     "react-scroll": "^1.9.0",
     "react-share": "^5.1.0",
+    "react-slick": "^0.30.2",
     "react-tilt": "^1.0.2",
     "sharp": "^0.33.2",
     "sitemap": "^7.1.1",
+    "slick-carousel": "^1.8.1",
     "swiper": "^10.3.1"
   },
   "devDependencies": {
