--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-parallax-tilt": "^1.7.177",
     "react-router-dom": "^6.16.0",
     "react-scroll": "^1.9.0",
+    "react-select": "^5.8.1",
     "react-share": "^5.1.0",
     "react-slick": "^0.30.2",
     "react-tilt": "^1.0.2",
